feature (workers) send message to woker

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	<p>Count Numbers: <output id="result"></output></p>
 	<button onclick="startWorker()">Start Worker</button>
 	<button onclick="stopWorker()">Stop Worker</button>
+	<button onclick="sendMessageToWorker()">Message Worker</button>
+	<input type="text" id="field"><br>
+	
 	<script src="main.js"></script>
 </body>
 </html>
